More work on POJO SnapShot